--- a/metadata.yaml
+++ b/metadata.yaml
@@ -32,5 +32,6 @@ rights_url: http://creativecommons.org/about/pdm
 subjects:
 - !lcc 'PS'
 - !lcsh 'Detective and mystery stories'
+- GITenberg
 title: Hand and Ring
 url: http://www.gutenberg.org/ebooks/31681
